--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "class-validator": "^0.12.2",
     "clipboard": "^2.0.6",
     "core-js": "^3.6.5",
+    "echarts": "^5.0.1",
     "html2canvas": "^1.0.0-rc.7",
     "lib-flexible": "^0.3.2",
     "postcss-px2rem": "^0.3.0",
